# Thermal-spray-electrodes

./: .gitignore  README.md  change_username.py  defective_electrode_registration.py  main_contents.py  order_management_linde.py  password_reset.py  pyproject.toml  recent_shipments.py  sign_in.py  sign_out.py  streamlit_app.py  supabaseテーブルトリガーの作成方法.md  update_syukka_status.py  util.py  新規受注登録画面(Linde様専用).md
static/: manifest.json
